[package]
name = "ccfs-commons"
version = "0.1.0"
authors = ["zoran <lazarevic.zoki91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-multipart = "0.3.0"
mpart-async = "0.4.2"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.9"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
snafu = "0.6.10"
regex = "1.4.3"
snafu-cli-debug = "0.1.1"
