[package]
name = "chunk-server"
version = "0.1.0"
authors = ["zoran <lazarevic.zoki91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.1"
actix-multipart = "0.4.0-beta.1"
actix-http = "3.0.0-beta.1"
mpart-async = "0.5.0"
tokio = { version = "1.1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.6", features = ["codec", "io"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.12"
dirs = "3.0.1"
ccfs-commons = { path = "../ccfs-commons" }
snafu = "0.6.10"
uuid = "0.8.2"
pnet = "0.27.2"
tempfile = "3.2.0"
serde_yaml = "0.8.15"

[dev-dependencies]
httpmock = "0.5.4"
actix-rt = "2.0.0-beta.2"
futures-util = "0.3.12"
