[package]
name = "chunk-server"
version = "0.1.0"
authors = ["zoran <lazarevic.zoki91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
actix-multipart = "0.4.0-beta.2"
actix-http = "3.0.0-beta.3"
mpart-async = "0.5"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
tokio = { version = "1.1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.6", features = ["codec", "io"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
dirs = "3.0"
ccfs-commons = { path = "../ccfs-commons" }
snafu = "0.6"
uuid = "0.8"
tempfile = "3.2"
serde_yaml = "0.8"

[dev-dependencies]
httpmock = "0.5"
actix-rt = "2.0"
futures-util = "0.3"
