[package]
name = "cli"
version = "0.1.0"
authors = ["zoran <lazarevic.zoki91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.1"
mpart-async = "0.5.0"
tokio = { version = "1.1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.6.2", features = ["io"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
structopt = "0.3.21"
ccfs-commons = { path = "../ccfs-commons" }
snafu = "0.6.10"
slice-group-by = "0.2.6"
futures = "0.3.12"
rand = "0.8.2"
dirs = "3.0.1"
tempfile = "3.2.0"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"
httpmock = "0.5.4"
actix-rt = "2.0.0-beta.2"
futures-util = "0.3.12"
