[package]
name = "cli"
version = "0.1.0"
authors = ["zoran <lazarevic.zoki91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
mpart-async = "0.5"
tokio = { version = "1.12", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.6", features = ["io"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
ccfs-commons = { path = "../ccfs-commons" }
snafu = "0.6"
slice-group-by = "0.2"
futures = "0.3"
rand = "0.8"
dirs = "4.0"
tempfile = "3.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
httpmock = "0.6"
actix-rt = "2.2"
futures-util = "0.3"
