[package]
name = "metadata-server"
version = "0.1.0"
authors = ["zoran <lazarevic.zoki91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
actix-http = "3.0.0-beta.3"
tokio = { version = "1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ccfs-commons = { path = "../ccfs-commons" }
chrono = "0.4"
dirs = "3.0"
snafu = "0.6"
bincode = "1.3"
futures = "0.3"
uuid = "0.8"
serde_yaml = "0.8"
tempfile = "3.2"

[dev-dependencies]
httpmock = "0.5"
actix-rt = "2.0"
futures-util = "0.3"
