[package]
name = "metadata-server"
version = "0.1.0"
authors = ["zoran <lazarevic.zoki91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
actix-codec = "0.4.0-beta.1"
actix-web = "4.0.0-beta.3"
actix-web-actors = "4.0.0-beta.2"
actix-http = "3.0.0-beta.3"
awc = "3.0.0-beta.2"
tokio = { version = "1.1", features = ["full"] }
bytes = "1.0"
bytestring = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
ccfs-commons = { path = "../ccfs-commons" }
chrono = "0.4"
dirs = "3.0"
snafu = "0.6"
bincode = "1.3"
futures = "0.3"
uuid = "0.8"
tempfile = "3.2"
async-raft = "0.6"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
httpmock = "0.5"
actix-rt = "2.0"
futures-util = "0.3"
